$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

August 1, 2009
--------------
NOISSUE by Michelle: Fixed notices.
#413494 by Michelle, snufkin: Added support for commend edited message in the post template.

August 1, 2009
--------------
#528480 by Michelle: Added extra divs around topics / latest user on statistics for seperate styling.
#436084 by MGParisi: Reduced size of some Blue Lagoon images.
#537018 by Michelle: Indented subbody of statistics in Naked and removed indenting from Boxy/Cloudless Day
#537018 by Michelle: Added a margin to the right of the post reply button on top of topics to Naked.
                     Put padding around .forum-post-content and .forum-post-title in Naked.
                     Added boxes around .forum-top-post-footer and .forum-topic-navigation in Boxy.
                     Made post number white on Boxy and Blue Lagoon.
                     Added odd/even table shading to Boxy as well as borders around the TDs.
#537018 by Michelle: Added span around 'subforums' label so it can be styled.
                     Made .forum-table a generic class for both types of tables and added .forum-table-forums and .forum-table-topics.                     
                     Made classes in forum tables more specific.
#518110 by Michelle: Documented the chunk of code in the post .tpl there to keep the new markers from being cached.

July 31, 2009
-------------
#524592 by Dave Reid: Added email to fake user object sent to Author Pane on comments for anon users.
#534816 by Michelle: Made sure all classes / IDs were forum specific.
NOISSUE by Michelle: Added a page preprocess to add a variable "forum_page" when a page is either the main forum/ pages or a node that can go in the forums.
#497450 by Michelle: Fixed not working image replacement on node links.
#537018 by Michelle: Made Cloudless Day Stacked the default style since it's the nicest one.

July 30, 2009
-------------