@@ -106,41 +106,54 @@ ul.forum-links li {
 }
 
 /* Topic listing */
-#forum .forum-table-topics th.views-field-title {
-  text-align: left;
-}
 
+/* Set column widths */
+#forum .forum-table-topics td.forum-topic-icon,
 #forum .forum-table-topics td.views-field-topic-icon {
   width: 26px;
 }
 
-#forum .forum-table-topics span.topic-icon {
-  display: block;
-}
-
+#forum .forum-table-topics td.forum-topic-title,
 #forum .forum-table-topics td.views-field-title {
   width: 50%;
 }
 
-#forum .forum-table-topics td.views,
+#forum .forum-table-topics td.forum-replies,
 #forum .forum-table-topics td.views-field-comment-count,
+#forum .forum-table-topics td.forum-number-views,
 #forum .forum-table-topics td.views-field-totalcount {
-  text-align: center;
-  white-space: nowrap;
   width: 10%;
 }
 
-#forum .forum-table-topics td.created,
-#forum .forum-table-topics td.last-reply {
-  font-size: 0.9em;
-  line-height: 140%;
-  padding: 0 10px;
-  white-space: normal !important;
-  width: 25%;
+#forum .forum-table-topics td.forum-last-reply,
+#forum .forum-table-topics td.views-field-last-updated {
+  width: 30%;
 }
 
-#forum .forum-table-topics td .links {
-  padding-top: 10px;
+/* Set alignments & spacing */
+#forum .forum-table-topics .forum-topic-title,
+#forum .forum-table-topics .views-field-title {
+  text-align: left;
+}
+
+#forum .forum-table-topics td.forum-replies,
+#forum .forum-table-topics td.views-field-comment-count,
+#forum .forum-table-topics td.forum-number-views,
+#forum .forum-table-topics td.views-field-totalcount {
+  text-align: center;
+  white-space: nowrap;
+}
+
+#forum .forum-table-topics td.forum-topic-created,
+#forum .forum-table-topics td.forum-last-reply,
+#forum .forum-table-topics td.views-field-last-updated {
+  line-height: 140%;
+  white-space: normal !important;
+}
+
+/* Topic icon */
+#forum .forum-table-topics span.topic-icon {
+  display: block;
 }
 
 /*** FORUM STATISTICS *******************************************************/
